@@ -23,6 +23,8 @@
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.io=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.time=ALL-UNNAMED
+                        --add-opens java.base/java.nio=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -52,6 +54,12 @@
     </build>
 
     <dependencies>
+        <!--dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.3</version>
+        </dependency-->
+
         <!-- JUnit 4 Dependency -->
         <dependency>
             <groupId>junit</groupId>
